<resources>
    <string name="app_name">Railway Guide</string>
    <string name="option1">Search Train</string>
    <string name="option2">Locate Train</string>
    <string name="option3">Travel History</string>
    <string name="option4">Train Info</string>
    <string name="option5">Profile</string>
    <string-array name="from_names">
        <item> Select Departure</item>

        <item> Akhaura </item>
        <item> Azampur </item>
        <item> Akkelpur </item>

        <item> B.Baria </item>
        <item> Birol </item>
        <item> Bogra </item>

        <item> Bimanbandor </item>
        <item> Brahmanbaria </item>

        <item> Benapole </item>
        <item> Birampur </item>
        <item> BB_East </item>
        <item> B.B Setu East </item>
        <item> B.B Setu Purbo </item>
        <item> Bhairab Bazar </item>
        <item> Brahmanbaria </item>

        <item> Chandpur </item>
        <item> Comilla </item>
        <item> Chittagong </item>
        <item> Chilahati </item>
        <item> Chapainawabganj </item>
        <item> Chuadanga </item>
        <item> Chirirbandar </item>

        <item> Dewangong </item>
        <item> Dhaka </item>
        <item> Dinajpur </item>
        <item> Dhaka Cantt. </item>
        <item> Dewanganj Bazar </item>

        <item> Feni </item>

        <item> Goalondaghat </item>
        <item> Goalonda hat </item>
        <item> Gaforgaon </item>
        <item> Gaibandha </item>

        <item> Ishurdi </item>
        <item> Ishurdi by pass </item>

        <item> Joydebpur </item>
        <item> Joydevpur </item>
        <item> Jamalpur </item>
        <item> Joypurhat </item>
        <item> Jessore </item>

        <item> Kisoregonj </item>
        <item> Khulna </item>
        <item> Kolkata </item>
        <item> Kulaura </item>

        <item> Lalmonirhat </item>
        <item> Laksam </item>
        <item> Laksham </item>

        <item> Mohanganj </item>
        <item> Mymensingh </item>
        <item> Mohangonj </item>

        <item> Noakhali </item>
        <item> N.Gong </item>
        <item> Narsingdi </item>
        <item> Natore </item>

        <item> Parbatipur </item>
        <item> Punchogor </item>
        <item> Poradha </item>
        <item> Phulbari </item>
        <item> Panchbibi </item>

        <item> Rahanpur </item>
        <item> Rangpur </item>
        <item> Rajshahi </item>

        <item> Santahar </item>
        <item> Shantahar </item>
        <item> Saidpur </item>
        <item> Sylhet </item>
        <item> Sirajganj </item>
        <item> Sirajganj Bazar </item>
        <item> Saiestaganj </item>
        <item> Srimangal </item>

        <item> Tarakandi </item>
        <item> Tangail </item>
        <item> Thakurgaon road </item>

        <item> Ullapara </item>

    </string-array>
    <string-array name="to_names">
        <item> Select Arrival</item>

        <item> Akhaura </item>
        <item> Azampur </item>
        <item> Akkelpur </item>

        <item> B.Baria </item>
        <item> Birol </item>
        <item> Bogra </item>

        <item> Bimanbandor </item>
        <item> Brahmanbaria </item>

        <item> Benapole </item>
        <item> Birampur </item>
        <item> BB_East </item>
        <item> B.B Setu East </item>
        <item> B.B Setu Purbo </item>
        <item> Bhairab Bazar </item>
        <item> Brahmanbaria </item>

        <item> Chandpur </item>
        <item> Comilla </item>
        <item> Chittagong </item>
        <item> Chilahati </item>
        <item> Chapainawabganj </item>
        <item> Chuadanga </item>
        <item> Chirirbandar </item>

        <item> Dewangong </item>
        <item> Dhaka </item>
        <item> Dinajpur </item>
        <item> Dhaka Cantt. </item>
        <item> Dewanganj Bazar </item>

        <item> Feni </item>

        <item> Goalondaghat </item>
        <item> Goalonda hat </item>
        <item> Gaforgaon </item>
        <item> Gaibandha </item>

        <item> Ishurdi </item>
        <item> Ishurdi </item>
        <item> Ishurdi by pass </item>

        <item> Joydebpur </item>
        <item> Joydevpur </item>
        <item> Jamalpur </item>
        <item> Joypurhat </item>
        <item> Jessore </item>

        <item> Kisoregonj </item>
        <item> Khulna </item>
        <item> Kolkata </item>
        <item> Kulaura </item>

        <item> Lalmonirhat </item>
        <item> Laksam </item>
        <item> Laksham </item>

        <item> Mohanganj </item>
        <item> Mymensingh </item>
        <item> Mohangonj </item>

        <item> Noakhali </item>
        <item> N.Gong </item>
        <item> Narsingdi </item>
        <item> Natore </item>

        <item> Parbatipur </item>
        <item> Punchogor </item>
        <item> Poradha </item>
        <item> Phulbari </item>
        <item> Panchbibi </item>

        <item> Rahanpur </item>
        <item> Rangpur </item>
        <item> Rajshahi </item>

        <item> Santahar </item>
        <item> Shantahar </item>
        <item> Saidpur </item>
        <item> Sylhet </item>
        <item> Sirajganj </item>
        <item> Sirajganj Bazar </item>
        <item> Saiestaganj </item>
        <item> Srimangal </item>

        <item> Tarakandi </item>
        <item> Tangail </item>
        <item> Thakurgaon road </item>

        <item> Ullapara </item>

    </string-array>
    <string name="Open">Railway Guide</string>
    <string name="Close">Railway Guide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_sowmik">
        Name: Sree Sowmik Kumar Sarker\n
        23th Batch\n
    Department of Computer Science and Engineering\nUniversity of Dhaka.</string>
    <string name="details_safwan">
        Name: Hossain Md Safwan\n
        23th Batch\n
    Department of Computer Science and Engineering\nUniversity of Dhaka.</string>
    <string name="details_dewan">
        Name: Raihan Dewan Iman\n
        23th Batch\n
    Department of Computer Science and Engineering\nUniversity of Dhaka.</string>
    <string name="about_us">    This android application is created for our Application lab
        project in 2nd year 2nd semester.So we decide to make Railway Guide app.
        This app will provide the information of every lines train information like how many train
        runs in this route and when travels,what is the seat price of each type(AC,S-Chair).\n\n
        The user also can set alarm in this app which will remain the user his journey date.\n
        Me and my another two project partner made this. \n\n\n
        Details:\n
    </string>
    <string name="help">First of all user need to create an user account by filling necessary data
        that are wanted. \n\nIn Home navigation bar by Search Train user can find from a district to
        another districts total number train runs. And can also see each train information such as
        total number of seats, price of each type of seat in trains and if user want to travel this
        train in a specific date can set an alarm in this app. Trust me that this app is faithful
        and in time it will notify the user about his journey.\n\n
        However, by the locate train user can know where a train is located this time by adding
        the train number.\n\n
        This app will also keep the traveling history of the user. So in traveling history user can
        see his/her traveling history.\n\n
        And in train info user can search a train and can see the details of the train.
        \n\n
        In the profile navigation bar user can see his/her profile and can edit and can add profile picture.
        also can see his/her travelling history from here.\n
        In setting user can change some internal function of this application. And user can also send
        feedback about this app and can share this app.\n

    </string>
    <string name="required1">Please enter a train name.</string>
    <string name="required2">Please enter a train no.</string>
    <string-array name="train_names">

        <item> Agnibina Express </item>
        <item> Agnibina Express </item>

        <item> Bharamaputra </item>
        <item> Barendra Express </item>
        <item> Balaka Comuter </item>
        <item> Benapole Commuter </item>
        <item> Benapol Commuter </item>
        <item> Burimari Express </item>
        <item> Bagora Express </item>

        <item> Chittra Express </item>
        <item> Chittagong mail </item>
        <item> Chilahati Express</item>

        <item> Dhaka mail </item>
        <item> Dhaka Express </item>
        <item> Dhumketue Express </item>
        <item> Drutojan Express </item>
        <item> Dolonchapa Express </item>
        <item> Dewanganj Comuter </item>
        <item> Dholesssory Express </item>
        <item> Dinajpur Commuter </item>

        <item> Egarosindhur Provati </item>
        <item> Egarosindhur Goduli </item>
        <item> Ekota Express </item>

        <item> Isakhan Express </item>

        <item> Jamalpur Commuter </item>
        <item> Jalalabad Express </item>
        <item> Jamuna Express </item>
        <item> Joyantika Express </item>

        <item> Kalani Express </item>
        <item> Kapotaskh Express </item>
        <item> Karnaphuli Express </item>
        <item> Kanchan Express </item>
        <item> Kushiara Express </item>

        <item> Lalmoni Express </item>
        <item> Local </item>

        <item> Madhumati Express </item>
        <item> Megna Express </item>
        <item> Moitree Express </item>
        <item> Mohanagar Goduli </item>
        <item> Mohanagar Provati </item>
        <item> Mymensingh Express </item>
        <item> Mahua Express </item>
        <item> Mahananda Express </item>

        <item> Noakhali Express </item>
        <item> Nakshikantha Express </item>
        <item> Nilsagar </item>

        <item> Padma Express </item>
        <item> Padmarag Express </item>
        <item> Parabat Express </item>
        <item> Paharia Express </item>
        <item> Perbotipur Commuter </item>

        <item> Rangpur Express</item>
        <item> Rupsha Express </item>
        <item> Rajshahi Express </item>
        <item> Rajshahi Commuter </item>
        <item> Rocket Express </item>

        <item> Subarna Express</item>
        <item> Sirajgong Express </item>
        <item> Sundarban Express </item>
        <item> Sagardari Express </item>
        <item> Simanta Express </item>
        <item> Silk city Express </item>
        <item> Surma mail </item>
        <item> Samatat Express </item>
        <item> Sagarika Express </item>

        <item> Turna Express </item>
        <item> Tista Express </item>
        <item> Titumir Express </item>
        <item> Titas Commuter </item>
        <item> Turag Express </item>

        <item> Upukol Express </item>
        <item> Uddayan Express </item>
        <item> Upaban Express </item>
        <item> Uttarbanga mail </item>
        <item> Uttara Express </item>

        <item> Voyal Express </item>

    </string-array>
</resources>